--- a/index.html
+++ b/index.html
@@ -321,14 +321,14 @@
         <div class="resume-item">
           <h4>Bachelor's Degree in Human Resource Management</h4>
           <h5>2021 - 2024</h5>
-          <p><em>University of Economics Ho Chi Minh City, Vietnam</em></p>
+          <p><em>University of Economics Ho Chi Minh City</em></p>
           <p>Specializing in human resources with a focus on strategic management and organizational development.</p>
         </div><!-- End Resume Item -->
 
         <div class="resume-item">
           <h4>Bachelor's Degree in Game Development</h4>
           <h5>2024 - 2026</h5>
-          <p><em>University of Ho Chi Minh City, Vietnam</em></p>
+          <p><em>University of Economics Ho Chi Minh City</em></p>
           <p>Focusing on the design and development of video games, with an emphasis on coding, art, and user experience.</p>
         </div><!-- End Resume Item -->
 
