--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
         <div class="resume-item">
           <h4>Bachelor's Degree in Game Development</h4>
           <h5>2024 - 2026</h5>
-          <p><em>University of Economics Ho Chi Minh City</em></p>
+          <p><em>VTC Academy</em></p>
           <p>Focusing on the design and development of video games, with an emphasis on coding, art, and user experience.</p>
         </div><!-- End Resume Item -->
 
         <div class="resume-item">
           <h4>Bachelor's Degree in Investment Economics</h4>
           <h5>2024 - 2027</h5>
-          <p><em>University of Ho Chi Minh City, Vietnam</em></p>
+          <p><em>University of Economics Ho Chi Minh City</em></p>
           <p>Studying the principles of economics in the context of investments, financial markets, and economic policies.</p>
         </div><!-- End Resume Item -->
 
