--- a/vn.html
+++ b/vn.html
@@ -300,14 +300,14 @@
         <div class="resume-item">
           <h4>Cử nhân Phát triển Game</h4>
           <h5>2024 - 2026</h5>
-          <p><em>Đại học Thành phố Hồ Chí Minh, Việt Nam</em></p>
+          <p><em>Học viện Thiết Kế và Công Nghệ VTC</em></p>
           <p>Tập trung vào thiết kế và phát triển trò chơi điện tử, với nhấn mạnh vào lập trình, nghệ thuật và trải nghiệm người dùng.</p>
         </div><!-- End Resume Item -->
 
         <div class="resume-item">
           <h4>Cử nhân Kinh tế Đầu tư</h4>
           <h5>2024 - 2027</h5>
-          <p><em>Đại học Thành phố Hồ Chí Minh, Việt Nam</em></p>
+          <p><em>Đại học Kinh tế Thành phố Hồ Chí Minh, Việt Nam</em></p>
           <p>Học các nguyên tắc kinh tế trong bối cảnh đầu tư, thị trường tài chính và chính sách kinh tế.</p>
         </div><!-- End Resume Item -->
 
